@@ -1,6 +1,7 @@
-Changes in version 1-3-1.1 (xx/xx/2015)
+Changes in version 1-3-1.1 (xx/xx/2016)
     * bugfix for combining item matrices with 0 rows (reported by C. Buchta).
     * bugfix for itemLabel recoding in is.subset (reported by sjain777). 
+    * bugfix for NAMESPACE export for %in%
     * is.redundant: fixed and performance improvement.
     * interestMeasure: performance improvement for "improvement" measure.
     * sort: speed up sort by always sorting NAs last.
